; ModuleID = '/home/carl/AnghaBench/reactos/modules/rosapps/applications/devutils/cdmake/extr_cdmake.c_write_bytecounted_string_as_big_endian_unicode.c'
source_filename = "/home/carl/AnghaBench/reactos/modules/rosapps/applications/devutils/cdmake/extr_cdmake.c_write_bytecounted_string_as_big_endian_unicode.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32, i8*, i8)* @write_bytecounted_string_as_big_endian_unicode to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @write_bytecounted_string_as_big_endian_unicode(i32 %0, i8* %1, i8 signext %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i8*, align 8
  %6 = alloca i8, align 1
  %7 = alloca i32, align 4
  store i32 %0, i32* %4, align 4
  store i8* %1, i8** %5, align 8
  store i8 %2, i8* %6, align 1
  %8 = load i32, i32* %4, align 4
  %9 = udiv i32 %8, 2
  store i32 %9, i32* %7, align 4
  br label %10

10:                                               ; preds = %20, %3
  %11 = load i8*, i8** %5, align 8
  %12 = load i8, i8* %11, align 1
  %13 = sext i8 %12 to i32
  %14 = icmp ne i32 %13, 0
  br i1 %14, label %15, label %18

15:                                               ; preds = %10
  %16 = load i32, i32* %7, align 4
  %17 = icmp ne i32 %16, 0
  br label %18

18:                                               ; preds = %15, %10
  %19 = phi i1 [ false, %10 ], [ %17, %15 ]
  br i1 %19, label %20, label %27

20:                                               ; preds = %18
  %21 = load i8*, i8** %5, align 8
  %22 = getelementptr inbounds i8, i8* %21, i32 1
  store i8* %22, i8** %5, align 8
  %23 = load i8, i8* %21, align 1
  %24 = call i32 @write_big_endian_word(i8 signext %23)
  %25 = load i32, i32* %7, align 4
  %26 = add i32 %25, -1
  store i32 %26, i32* %7, align 4
  br label %10

27:                                               ; preds = %18
  br label %28

28:                                               ; preds = %31, %27
  %29 = load i32, i32* %7, align 4
  %30 = icmp ne i32 %29, 0
  br i1 %30, label %31, label %36

31:                                               ; preds = %28
  %32 = load i8, i8* %6, align 1
  %33 = call i32 @write_big_endian_word(i8 signext %32)
  %34 = load i32, i32* %7, align 4
  %35 = add i32 %34, -1
  store i32 %35, i32* %7, align 4
  br label %28

36:                                               ; preds = %28
  %37 = load i32, i32* %4, align 4
  %38 = urem i32 %37, 2
  %39 = icmp ne i32 %38, 0
  br i1 %39, label %40, label %43

40:                                               ; preds = %36
  %41 = load i8, i8* %6, align 1
  %42 = call i32 @write_byte(i8 signext %41)
  br label %43

43:                                               ; preds = %40, %36
  ret void
}

declare dso_local i32 @write_big_endian_word(i8 signext) #1

declare dso_local i32 @write_byte(i8 signext) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
